book/tests/snapshots/snapshot__@queries__pipelines-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "from e = employees\nderive gross_salary = (salary + payroll_tax)\nsort gross_salary\ntake 10\njoin d = department [==dept_no]\nselect [e.name, gross_salary, d.name]\n"
input_file: book/tests/prql/queries/pipelines-3.prql
---
WITH table_1 AS (
  SELECT
    name,
    salary + payroll_tax AS gross_salary,
    dept_no
  FROM
    employees AS e
  ORDER BY
    gross_salary
  LIMIT
    10
)
SELECT
  table_0.name,
  table_0.gross_salary,
  d.name
FROM
  table_1 AS table_0
  JOIN department AS d ON table_0.dept_no = d.dept_no

