book/tests/snapshots/snapshot__@queries__syntax-12.prql.snap
---
source: book/tests/snapshot.rs
expression: "prql target:sql.bigquery\nfrom `project-foo.dataset.table`\njoin `project-bar.dataset.table` [==col_bax]\n"
input_file: book/tests/prql/queries/syntax-12.prql
---
SELECT
  `project-foo.dataset.table`.*,
  `project-bar.dataset.table`.*
FROM
  `project-foo.dataset.table`
  JOIN `project-bar.dataset.table` ON `project-foo.dataset.table`.col_bax = `project-bar.dataset.table`.col_bax
