book/tests/snapshots/snapshot__@queries__syntax-13.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nfilter id == $1\n"
input_file: book/tests/prql/queries/syntax-13.prql
---
SELECT
  *
FROM
  employees
WHERE
  id = $1
