book/tests/snapshots/snapshot__@queries__syntax-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from numbers\nderive [x = 1, y = 2]\nderive [\n  a = x,\n  b = y\n]\nderive [\n  c = a,\n  d = b,\n]\n"
input_file: book/tests/prql/queries/syntax-2.prql
---
SELECT
  *,
  1 AS x,
  2 AS y,
  1 AS a,
  2 AS b,
  1 AS c,
  2 AS d
FROM
  numbers
