book/tests/snapshots/snapshot__@queries__syntax-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nselect [first_name]\n"
input_file: book/tests/prql/queries/syntax-3.prql
---
SELECT
  first_name
FROM
  employees
